<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="7dp"
    android:layout_marginTop="10dp"
    android:layout_marginEnd="100dp">

    <ImageView
        android:id="@+id/recieverImage"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:background="@drawable/reciever_drawable"
        android:padding="4dp"
        android:scaleType="centerCrop"
        android:src="@android:drawable/screen_background_light"
        android:transitionName="@string/msg_image"
        android:contentDescription="@string/recieve_Img_description" />

    <TextView
        android:id="@+id/recieverMsg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/reciever_image_drawable"
        android:paddingStart="20dp"
        android:paddingTop="10dp"
        android:paddingEnd="15dp"
        android:paddingBottom="10dp"
        android:text="@string/message"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:visibility="visible"
        android:layout_marginTop="@dimen/authTopMargin"
        android:layout_below="@id/recieverImage"/>

    <TextView
        android:id="@+id/extendableText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="20dp"
        android:paddingTop="10dp"
        android:paddingEnd="15dp"
        android:paddingBottom="10dp"
        android:text="@string/show_more"
        android:background="?attr/selectableItemBackground"
        android:contextClickable="true"
        android:focusable="true"
        android:visibility="gone"
        android:layout_alignBottom="@id/recieverMsg"
        android:layout_alignEnd="@id/recieverMsg"
        android:textColor="@color/splash"/>

</RelativeLayout>