<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/black"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.ImageViewer">

    <ImageView
        android:id="@+id/fullSizeImage"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/image_viewer_description"
        android:scaleType="fitCenter"
        android:src="@android:drawable/screen_background_light"
        android:transitionName="@string/msg_image"/>

    <View
        android:id="@+id/flung"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>


    <ScrollView
        android:id="@+id/imageCaptionScroll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="vertical"
        android:layout_alignParentBottom="true"
        android:fillViewport="true">

        <TextView
            android:id="@+id/imageCaption"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="40dp"
            android:paddingVertical="20dp"
            android:background="#88000000"
            android:maxLines="10"
            android:scrollbars="vertical"
            android:text="@string/caption"
            android:textAlignment="center"
            android:textColor="@color/white"/>

    </ScrollView>

    <TextView
        android:id="@+id/extendableText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingHorizontal="40dp"
        android:paddingVertical="20dp"
        android:text="@string/show_more"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:visibility="gone"
        android:layout_alignParentBottom="true"
        android:layout_alignEnd="@id/imageCaptionScroll"
        android:textColor="@color/splash"/>

</RelativeLayout>