<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/layTopMargin"
    android:padding="@dimen/layTopMargin"
    android:background="?selectableItemBackground"
    >

    <ImageView
        android:id="@+id/userStatusProfile"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/no_profile"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/status_user_profile_image_description" />

    <TextView
        android:id="@+id/userStatusName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="4dp"
        android:text="@string/user_name"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/userStatusProfile"
        app:layout_constraintTop_toTopOf="@+id/userStatusProfile" />

    <TextView
        android:id="@+id/timeStampStatus"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/status_update_txt"
        android:textSize="12sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="@+id/userStatusProfile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/userStatusProfile"
        app:layout_constraintTop_toBottomOf="@+id/userStatusName" />


</androidx.constraintlayout.widget.ConstraintLayout>