<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="5dp"
    android:layout_marginBottom="3dp"
    android:padding="@dimen/layTopMargin"
    android:background="?selectableItemBackground">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/userProfilePicture"
        android:layout_width="50dp"
        android:layout_height="0dp"
        android:contentDescription="@string/user_pfp"
        android:padding="2dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/no_profile" />

    <TextView
        android:id="@+id/conversationUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="3dp"
        android:text="@string/user_name"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/userProfilePicture"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/recentMsg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/cairo"
        android:text="@string/tap_to_chat"
        app:layout_constraintStart_toStartOf="@+id/conversationUser"
        app:layout_constraintTop_toBottomOf="@+id/conversationUser" />

    <TextView
        android:id="@+id/msgTimeStamp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/cairo_light"
        android:text="6:00pm"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>