<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="0dp"
    app:strokeColor="@android:color/transparent"
    android:layout_marginBottom="0.5dp"
    android:background="@color/white"
    app:cardElevation="@dimen/elevation_cardView">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/constraint_padding">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="@dimen/square_card_size"
            android:layout_height="@dimen/square_card_size"
            app:cardCornerRadius="@dimen/card_corner"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/user_pfp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/user_pfp"
                android:scaleType="fitXY"
                android:src="@drawable/no_profile" />

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/user_name"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/enter_your_name"
            android:textSize="@dimen/text_sz"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.05"
            app:layout_constraintStart_toEndOf="@+id/cardView"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.2" />

        <TextView
            android:id="@+id/user_aboutMe"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/about_profile"
            android:textSize="@dimen/text_sz"
            android:textStyle="italic"
            android:paddingTop="@dimen/padding_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.05"
            app:layout_constraintStart_toEndOf="@+id/cardView"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.9" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</com.google.android.material.card.MaterialCardView>